# WAAR_MAS

./: .gitignore  README.md  Setting.md
mas_interfaces/: CMakeLists.txt  package.xml
mas_interfaces/msg/: MineBelief.msg  MineDelta.msg  PoseBeacon.msg  SyncAck.msg  SyncHello.msg  TaskAnnounce.msg  TaskClaim.msg  TaskResult.msg
mas_mission/: package.xml  setup.py
mas_mission/launch/: team_launch.py
mas_mission/mas_mission/: bt_runner.py  mission_logic_node.py  state_machine.py
mas_sync/: package.xml  setup.py
mas_sync/mas_sync/: belief_fusion.py  p2p_sync_node.py
mas_task/: package.xml  setup.py
mas_task/mas_task/: auction_manager.py  p2p_task_node.py
tests/: test_auction_manager.py  test_belief_fusion.py  test_bt_runner.py  test_state_machine.py
