<?xml version="1.0"?>
<package format="3">
  <name>mas_interfaces</name>
  <version>0.1.0</version>
  <description>Custom ROS2 messages for the MAS coordinator (IARC Mission 10)</description>
  <maintainer email="team@iarc.local">IARC Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
