<?xml version="1.0"?>
<package format="3">
  <name>mas_mission</name>
  <version>0.1.0</version>
  <description>Mission logic + state machine for IARC Mission 10</description>
  <maintainer email="team@iarc.local">IARC Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>mas_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>builtin_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
