<?xml version="1.0"?>
<package format="3">
  <name>mas_task</name>
  <version>0.1.0</version>
  <description>P2P task auction node for IARC Mission 10</description>
  <maintainer email="team@iarc.local">IARC Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>mas_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
